@@ -288,9 +288,9 @@ File presentation:
                                 files.  (default: on when used interactively)
   --group                       Same as --heading --break
   --nogroup                     Same as --noheading --nobreak
-  --[no]proximate               Separate match output with blank lines unless
-                                they are on adjacent lines.
-  -P                            Negates --proximate.
+  -p, --proximate=LINES         Separate match output with blank lines unless
+                                they are within LINES lines from each other.
+  -P, --proximate=0             Negates --proximate.
   --[no]underline               Print a line of carets under the matched text.
   --[no]color, --[no]colour     Highlight the matching text (default: on unless
                                 output is redirected, or on Windows)
