@@ -30,10 +30,10 @@ my %defaults = (
     m          => undef,
     n          => undef,
     output     => undef,
+    p          => undef,
     pager      => undef,
     passthru   => undef,
     print0     => undef,
-    proximate  => undef,
     Q          => undef,
     regex      => undef,
     s          => undef,
