@@ -2,6 +2,8 @@ History file for ack.  https://beyondgrep.com/
 
 NEXT
 =====================================
+[ENHANCEMENTS]
+Add -p as a shorter version of --proximate.
 
 
 2.999_04 Thu Sep  6 17:45:07 CDT 2018
